# pyactr-tutorials

./: .gitignore  PYACTR_API_GUIDE.md  README.md  pyproject.toml
notebooks/01_introduction/: 01_introduction_to_actr_and_pyactr.ipynb
notebooks/02_declarative_memory/: 02_chunks_and_declarative_memory.ipynb
notebooks/03_production_rules/: 03_production_rules_and_procedural_memory.ipynb
notebooks/04_building_complete_model/: 04_building_a_simple_cognitive_model.ipynb
notebooks/05_advanced_modeling/: 05_advanced_subsymbolic_processing.ipynb
notebooks/06_real_world_application/: 06_real_world_application.ipynb
notebooks/07_motor_timing/: 07_motor_control_and_timing.ipynb
notebooks/08_vision_attention/: 08_vision_and_attention.ipynb
notebooks/09_learning/: 09_learning_and_skill_acquisition.ipynb
notebooks/10_model_fitting/: 10_model_fitting_and_parameter_estimation.ipynb
notebooks/11_problem_solving/: 11_complex_problem_solving.ipynb
notebooks/12_language_processing/: 12_language_processing.ipynb
pyactr-webapp/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  start.sh
pyactr-webapp/backend/: Dockerfile  main.py  requirements.txt  test_api.py
pyactr-webapp/frontend/: Dockerfile  index.html  package.json  serve_frontend.py  vite.config.ts
pyactr-webapp/frontend/src/: App.tsx  index.css
pyactr-webapp/frontend/src/components/: CodeEditor.tsx  Layout.tsx
pyactr-webapp/frontend/src/data/: tutorialContent.ts  tutorialExtensions1-6.ts  tutorials.ts
pyactr-webapp/scripts/: convert_notebooks.py
(+4 files in other folders)
