[project]
name = "pyactr-tutorials"
version = "0.1.0"
description = "Interactive tutorials for learning pyactr (Python ACT-R) as a scientific cognitive modeling tool"
authors = [{name = "Aji Ghose"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyactr>=0.3.2",
    "pymc3>=3.11.4",
    "scipy>=1.17.1",
    "seaborn>=0.13.0",
]
